USASNGI-683 : Mobile PDP : FIX : Fix nonscrollable image on mobile

--- a/stylesheets/modules/product/product-images.less
+++ b/stylesheets/modules/product/product-images.less
@@ -128,6 +128,7 @@
             border: 1px solid #9e9e9e;
             // padding: 15px;
             border-radius: 20px;
+            pointer-events: none;
         }
     }
     .owl-carousel .owl-item img {
